# QNixieNumber

./: CMakeLists.txt  QNixieNumberConfig.cmake.in  README.md  main.cpp  qnixienumber.cpp  qnixienumber.h  qnixienumber_resource.qrc
examples/: CMakeLists.txt  main.cpp
qnixienumber_resource/nixie_numbers/: n0  n1  n2  n3  n4  n5  n6  n7  n8  n9
